--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "authors": [
     {
       "name": "Origammi",
-      "homepage": "https://github.com/origammi"
+      "homepage": "https://github.com/origammi/BlocksBundle/graphs/contributors"
     }
   ],
 
@@ -17,7 +17,9 @@
     "php": ">=5.3.3",
 
     "infinite-networks/form-bundle": "1.0.*@alpha",
-    "Trsteel/ckeditor-bundle": "~1.6"
+    "Trsteel/ckeditor-bundle": "~1.6",
+    "knplabs/doctrine-behaviors": "~1.0",
+    "doctrine/doctrine-bundle": "~1.2"
   },
 
   "require-dev": {
