--- a/Test/Application/app/config.yml
+++ b/Test/Application/app/config.yml
@@ -2,8 +2,21 @@ imports:
     - { resource: parameters.yml }
 
 framework:
-  secret: OmgItIsASecretOfThisBundleTest
+  secret: %secret%
   test:   ~
+  session:
+    storage_id: session.storage.filesystem
+  templating:
+    engines: ['twig']
+  validation: { enable_annotations: true }
+  router:
+    resource:            "%kernel.root_dir%/routing.yml"
+    strict_requirements: ~
+
+liip_functional_test: ~
+
+vich_uploader:
+    db_driver: orm # or mongodb or propel or phpcr
 
 doctrine:
   dbal:
@@ -15,3 +28,19 @@ doctrine:
     user:     %database_user%
     password: %database_password%
     charset:  UTF8
+  orm:
+    auto_generate_proxy_classes: "%kernel.debug%"
+    auto_mapping: false
+    mappings:
+      test:
+        type:      annotation
+        dir:       %kernel.root_dir%/../Entity/
+        alias:     TestEntities
+        prefix:    Origammi\Bundle\BlocksBundle\Test\Application\Entity
+        is_bundle: false
+      app:
+        type:      annotation
+        dir:       %kernel.root_dir%/../../../Entity/
+        alias:     Entity
+        prefix:    Origammi\Bundle\BlocksBundle\Entity
+        is_bundle: false
