--- a/Test/Application/app/parameters.yml.dist
+++ b/Test/Application/app/parameters.yml.dist
@@ -1,4 +1,5 @@
 parameters:
+  secret:            OmgThisIsASecretOfThisBundleTest
   database_driver:   pdo_sqlite
   database_host:     127.0.0.1
   database_port:     null
