--- a/Test/Application/app/config.yml
+++ b/Test/Application/app/config.yml
@@ -24,7 +24,6 @@ twig:
       - 'InfiniteFormBundle::form_theme.html.twig'
       - 'OrigammiBlocksBundle:Form:fields.html.twig'
 
-
 liip_functional_test: ~
 
 vich_uploader:
@@ -56,3 +55,25 @@ doctrine:
         alias:     Entity
         prefix:    Origammi\Bundle\BlocksBundle\Entity
         is_bundle: false
+
+monolog:
+    handlers:
+      main:
+        type:   stream
+        path:   "%kernel.logs_dir%/%kernel.environment%.log"
+        level:  debug
+      console:
+        type:   console
+        bubble: false
+        verbosity_levels:
+          VERBOSITY_VERBOSE:      INFO
+          VERBOSITY_VERY_VERBOSE: DEBUG
+        channels: ["!doctrine"]
+      console_very_verbose:
+        type:   console
+        bubble: false
+        verbosity_levels:
+          VERBOSITY_VERBOSE:      NOTICE
+          VERBOSITY_VERY_VERBOSE: NOTICE
+          VERBOSITY_DEBUG:        DEBUG
+        channels: ["doctrine"]
