--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -30,6 +30,7 @@
 
     <php>
         <server name="KERNEL_DIR" value="Test/Application/app/" />
+        <server name="CREATE_DB" value="true" />
     </php>
 
     <logging>
