--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Test/Application/app/tmp
 Test/Application/app/parameters.yml
 Test/Application/web/build
 Test/Application/web/bundles
+Test/Application/web/upload
