--- a/Test/Application/app/parameters.yml.dist
+++ b/Test/Application/app/parameters.yml.dist
@@ -8,4 +8,5 @@ parameters:
   database_password: ~
   database_path:     %kernel.cache_dir%/%database_name%.sqlite
   locale:            en
-  upload_dir:        %kernel.cache_dir%/upload
+  upload_dir:        %kernel.root_dir%/../web/upload
+  upload_uri:        upload
