--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,17 @@ php:
 env:
     - SYMFONY_VERSION="2.3.*"
     - SYMFONY_VERSION="2.6.*"
-    - SYMFONY_VERSION="2.7.x-dev"
+    - SYMFONY_VERSION="2.7.*"
+    - SYMFONY_VERSION="2.8.x-dev"
+    - SYMFONY_VERSION="3.0.x-dev"
 
 matrix:
   fast_finish: true
   allow_failures:
     - php: hhvm
-    - env: SYMFONY_VERSION="2.7.x-dev"
+    - env: SYMFONY_VERSION="2.7.*"
+    - env: SYMFONY_VERSION="2.8.x-dev"
+    - env: SYMFONY_VERSION="3.0.x-dev"
 
 before_script:
     - composer self-update # Update composer as travis is not updating it.
