--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
 
     "symfony/symfony": "~2.3",
     "sensio/framework-extra-bundle": "~2.3",
-    "doctrine/doctrine-fixtures-bundle": "~2.2"
+    "doctrine/doctrine-fixtures-bundle": "~2.2",
+    "symfony/phpunit-bridge": "2.7.x-dev"
   },
 
   "autoload": {
