--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,6 @@ env:
 matrix:
   fast_finish: true
   include:
-    - php: 5.4
-      env: deps="low"
     - php: 5.5
       env: SYMFONY_VERSION="~2.3.0" SYMFONY_DEPRECATIONS_HELPER=strict
     - php: 5.5
@@ -29,8 +27,7 @@ matrix:
 before_script:
     - composer self-update # Update composer as travis is not updating it.
     - if [ "$SYMFONY_VERSION" != "" ]; then composer require --dev --no-update symfony/symfony=$SYMFONY_VERSION; fi
-    - if [ "$deps" = "low" ]; then composer update --prefer-lowest; fi
-    - if [ "$deps" != "low" ]; then composer update; fi
+    - composer update
 
 script:
   - bin/phpunit --coverage-clover=coverage.clover -d zend.enable_gc=0
